fixed gap -> window.load

--- a/public/stylesheets/remstyle.sass
+++ b/public/stylesheets/remstyle.sass
@@ -20,6 +20,7 @@ header
     padding: 0
     position: absolute
     top: 50%
+    -webkit-transform: translateY(-50%)
     transform: translateY(-50%)
     vertical-align: bottom
     line-height: 1.2em
@@ -58,6 +59,9 @@ article
 #post
   padding: 2%
   padding-top: 5.5%
+  width: 100%
   h1, p
     margin: 2%
     text-align: left
+  article
+    width: 96%
